# fluvio-duck

./: .gitignore  CMakeLists.txt  Cargo.toml  Earthfile  Makefile  README.md  build_extension.sh
.github/workflow/: ci.yml
.github/workflows/: ci.yml
examples/: README.md  jolt.yaml  short.yaml
src/: bind.rs  consume.rs  lib.rs  partition.rs  topic.rs  wrapper.c
