[package]
name = "fluvio-duck"
edition = "2021"
version = "0.0.0"
authors = ["fluvio.io"]
description = "Fluvio Duck"
repository = "https://github.com/infinyon/fluvio"
license = "Apache-2.0"
publish = false


[lib]
name = "fluvioduck"
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.38"
libduckdb-sys = "0.7.1"
parquet = "34"
futures-lite = "2.0.0"
clap = { version = "4.0.10", features = [
    "std",
    "derive",
    "string",
    "help",
    "usage",
    "env",
    "error-context",
], default-features = false }
jql = "5.1.4"
serde_json = "1.0.91"
tracing = "0.1.19"
chrono = "0.4.23"

# Fluvio dependencies
fluvio = { version = "0.17.0 " }
fluvio-types = { version = "0.4.0" }
fluvio-smartengine = { version = "0.6.0", features = [
    "transformation",
], default-features = false }
fluvio-future = { version = "0.4.0", features = ["subscriber"]}
